--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,11 @@
 
 // If you want to add something do it here
 @import "custom";
+html {
+    font-size: 62.5%;
+  }
+  body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+  }
