Design Technologies Section

--- a/src/views/pages/page404/Header.css
+++ b/src/views/pages/page404/Header.css
@@ -27,8 +27,8 @@
 }
 /* Navbar */
 .navbar {
-  background-color: #000;
-  color: #fff;
+  background-color: #fff;
+  color: #000;
   display: flex;
   justify-content: space-between;
   height: 100px;
@@ -45,8 +45,8 @@
   padding: 20px;
   text-decoration: none;
   text-transform: capitalize;
-  color: #fff;
-  font-size: 1rem;
+  color: #000;
+  font-size: 2rem;
   font-family: 'Roboto', sans-serif;
   cursor: pointer;
 }
@@ -91,7 +91,7 @@
   align-items: center;
   display: none;
   transition: top 2s ease;
-  background-color: #000;
+  background-color: #fff;
 
 }
 
