--- a/src/views/pages/page404/components/Company_Section/Company.css
+++ b/src/views/pages/page404/components/Company_Section/Company.css
@@ -1,4 +1,16 @@
 .wrapper{
     background-color: #fff;
-    height: 600px;
+    height: 300px;
 }
+.container__firstrow{
+    padding-top: 40px;
+}
+@media screen and (max-width: 800px) {
+    .wrapper{
+        height: 500px;
+        padding-top: 20px;
+    }
+    .container__firstrow{
+        padding-top: 10px;
+    }
+  }
