--- a/src/views/pages/page404/components/Section4/Section4.css
+++ b/src/views/pages/page404/components/Section4/Section4.css
@@ -8,7 +8,7 @@
 }
 .caption__title{
     font-weight: 300px;
-    font-size: 50px;
+    font-size: 3.1rem;
     font-family: 'Roboto', sans-serif;
 }
 .logo{
@@ -19,9 +19,9 @@
     font-size: 20px !important;
     font-weight:bold !important;
 }
-@media screen and (max-width: 800px) {
+@media (max-width: 800px) {
     .container__wrapper{
-        height: 1000px;
+        height: 1200px;
         margin-top: 100px;
     }
   }
