--- a/src/views/pages/page404/Header.css
+++ b/src/views/pages/page404/Header.css
@@ -15,6 +15,7 @@
   height: 100%;
   text-align: center;
   z-index: 1;
+  flex-wrap: wrap;
 }
 .banner h1 {
   font-weight: 800;
@@ -23,7 +24,15 @@
   font-weight: 700;
 }
 .banner__image{
-    width: 900px;
+    width:100%
+}
+
+@media screen and (min-width: 480px) {
+  .banner__image{
+  
+
+    
+  }
 }
 /* Navbar */
 .navbar {
