--- a/src/views/pages/page404/components/Section6/Section6.css
+++ b/src/views/pages/page404/components/Section6/Section6.css
@@ -1,28 +1,9 @@
-.section6__wrapper{
-    height: 500px;
-}
-.text__heading{
-    font-size: 50px;
-    font-weight: 600;
-    font-family: 'Roboto', sans-serif;
-    color: black;
-    
-}
-.btn{
-    width: 150px;
-    height: 50px;
-    border-radius: 30px;
-}
-.btn-section{
-    position: relative;
-    display: flex;
+
+
+.wrapper{
+    /* border:2px solid blue; */
+    flex-direction: column;
     justify-content: center;
-}
-@media (max-width:800px){
-    .text__heading{
-        font-size: 30px;
-        font-weight: 600;
-        font-family: 'Roboto', sans-serif;
-        
-    }
+    align-items: center;
+    
 }
